Finished implementations of services : TDD tests all passed
Note : asynchronous messaging not implemented yet